# yadisk-gtk

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/: copilot-instructions.md
.github/workflows/: smoke-modes.yml
packaging/dbus/: me.spaceinbox.yadisk.Sync1.service
packaging/flatpak/: com.yadisk.Gtk.json  me.spaceinbox.yadisk.Gtk.json  sandbox-ux.toml
packaging/host/: contract.toml  gnome-live-smoke.sh  install-nautilus-extension.sh  install-nautilus-scripts.sh  install-yadisk-fuse.sh  nautilus-apply-status-emblems.sh  nautilus-extension-smoke.sh  nautilus-save-offline.sh  packages.spec
packaging/share/applications/: me.spaceinbox.yadisk.Gtk.desktop
packaging/share/metainfo/: me.spaceinbox.yadisk.Gtk.metainfo.xml
packaging/systemd/: yadisk-fuse.service  yadiskd.path  yadiskd.service
po/: POTFILES.in  ru.po  yadisk-gtk.pot
yadisk-core/: Cargo.toml
yadisk-core/src/: client.rs  lib.rs  oauth.rs
yadisk-core/tests/: client.rs  oauth.rs
yadisk-fuse/: Cargo.toml
yadisk-fuse/src/: lib.rs  main.rs
yadisk-integrations/: Cargo.toml
yadisk-integrations/src/: i18n.rs  ids.rs  lib.rs  preferences.rs
yadisk-nautilus/: Cargo.toml
yadisk-nautilus/src/: lib.rs  lib_tests.rs  nautilus_plugin.rs  nautilus_plugin_runtime.rs
yadisk-ui/: Cargo.toml
yadisk-ui/src/: control_client.rs  diagnostics.rs  gtk_app.rs  integration_control.rs  main.rs  service_control.rs  settings.rs  state.rs  ui_model.rs
yadisk-ui/tests/: cli_smoke.rs
yadiskd/: Cargo.toml
yadiskd/migrations/: 0001_initial_schema.sql  0002_expand_sync_schema.sql  0003_add_ops_queue_dequeue_index.sql  0004_add_state_last_accessed.sql
yadiskd/src/: daemon.rs  daemon_helpers.rs  daemon_tests.rs  dbus_api.rs  lib.rs  main.rs  oauth_flow.rs  token_provider.rs  tray.rs
yadiskd/src/storage/: mod.rs  portal_token_store.rs  secret_portal.rs  token_storage.rs
yadiskd/src/sync/: backoff.rs  conflict.rs  engine.rs  engine_impl_core.rs  engine_impl_ops.rs  index.rs  index_store_impl.rs  index_tests.rs  local_watcher.rs  mod.rs  paths.rs  queue.rs  transfer.rs
yadiskd/src/sync/engine_tests/: mod.rs  part1.rs  part2.rs  part3a.rs  part3b.rs  part4.rs
