[package]
name = "yadisk-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Core client for the Yandex Disk REST API"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
