[package]
name = "yadisk-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Core client for the Yandex Disk REST API"

[dependencies]
httpdate = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
