[package]
name = "yadisk-fuse"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
fuse-mount = ["dep:fuser", "dep:tokio", "dep:dirs", "dep:libc", "dep:zbus", "dep:anyhow"]

[dependencies]
thiserror = "2.0"
yadiskd = { path = "../yadiskd" }
fuser = { version = "0.15", optional = true }
tokio = { version = "1.37", features = ["rt-multi-thread", "time"], optional = true }
dirs = { version = "6.0", optional = true }
libc = { version = "0.2", optional = true }
zbus = { version = "5.13", default-features = false, features = ["blocking-api"], optional = true }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
