[package]
name = "yadisk-nautilus"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
nautilus-plugin = [
    "dep:url",
    "dep:glib-sys",
    "dep:gobject-sys",
    "dep:dirs",
]

[dependencies]
thiserror = "2.0"
zbus = { version = "5.13", default-features = false, features = ["blocking-api", "async-io"] }
url = { version = "2.5", optional = true }
glib-sys = { version = "0.15", optional = true }
gobject-sys = { version = "0.15", optional = true }
dirs = { version = "6.0", optional = true }
