[package]
name = "yadisk-ui"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["gtk-ui"]
gtk-ui = ["dep:gtk4", "dep:libadwaita"]

[dependencies]
anyhow = "1.0"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zbus = { version = "5.13", default-features = false, features = ["blocking-api", "tokio"] }
keyring = { version = "3.6", default-features = false, features = ["sync-secret-service", "crypto-rust", "vendored"] }
yadisk-integrations = { path = "../yadisk-integrations" }
gtk4 = { version = "0.9", optional = true }
libadwaita = { version = "0.7", optional = true }
