[package]
name = "yadiskd"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std"] }
dirs = "6.0"
keyring = { version = "3.6", default-features = false, features = ["sync-secret-service", "crypto-rust", "vendored"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
url = "2.5"
yadisk-core = { path = "../yadisk-core" }

[dev-dependencies]
tempfile = "3.12"
