[package]
name = "yadiskd"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std"] }
dirs = "6.0"
keyring = { version = "3.6", default-features = false, features = ["sync-secret-service", "crypto-rust", "vendored"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
md5 = "0.7"
notify = "6.1"
url = "2.5"
zbus = { version = "5.13", default-features = false, features = ["tokio"] }
yadisk-core = { path = "../yadisk-core" }

[dev-dependencies]
tempfile = "3.12"
wiremock = "0.6"
